tests/procedure_call/unclosed_right1.ast.err
Error: Unclosed delimiter ( while parsing expression
   ╭─[tests/procedure_call/unclosed_right1.scm:1:10]
   │
 1 │ (3132 ( a
   ·       ┬  ┬  
   ·       ╰───── Unclosed delimiter (
   ·          │  
   ·          ╰── Must be closed before this end of file
───╯
